# guardian-universe

./: .gitignore  README.md  RUNBOOK.md
fundamentals/fundamentals-core/: Cargo.toml
fundamentals/fundamentals-core/fixtures/: bse-fourone-reliance-q3fy25.xml  bse-integrated-ttkprestige-517506.xml  nse-integrated-bajfinance.xml  nse-integrated-hdfcbank.xml  nse-integrated-icicigi.xml  nse-integrated-list-reliance.json  nse-integrated-reliance.xml  nse-integrated-sbilife.xml
fundamentals/fundamentals-core/src/: instance.rs  lib.rs  types.rs  xbrl_integrated.rs
fundamentals/fundamentals-producer/: Cargo.toml
fundamentals/fundamentals-producer/src/: bse.rs  gate.rs  http.rs  main.rs  output.rs  pipeline.rs  rows.rs  source.rs  state.rs  universe.rs
pipeline/: README.md  pyproject.toml
pipeline/data/meta/: holidays.json  special_sessions.json
pipeline/scripts/: README.md  check_nse_coverage.py  harvest_bse_industry.py  harvest_nse_industry.py  try_bse.py  try_nsepython.py
pipeline/seeds/: sector_industry_seed.csv
pipeline/src/pipeline/: __init__.py  __main__.py  backfill.py  builders.py  calendar.py  cli.py  config.py  crosscheck.py  daily_update.py  datasets.py  errors.py  fetch.py  freshness.py  manifest.py  normalize.py  normalize_indices.py  publish.py  rebuild.py  release.py  restore.py  schema.py  snapshot.py  store.py  sync.py  validate.py
pipeline/tests/: fakes.py  test_backfill.py  test_builders_ca_flags.py  test_builders_reference.py  test_builders_sector.py  test_calendar.py  test_chaos.py  test_cli.py  test_crosscheck.py  test_daily_update.py  test_datasets.py  test_fetch.py  test_fetch_indices.py  test_freshness.py  test_kite_rebuild.py  test_manifest.py  test_normalize.py  test_normalize_indices.py  test_nse_udiff_url.py  test_publish.py  test_rebuild_registry.py  test_release.py  test_restore.py  test_schema.py  test_secfull.py  test_sector_seed.py  test_smoke.py  test_snapshot.py  test_store.py  test_sync.py  test_validate.py
pipeline/tests/fixtures/: bhavcopy_mixed_session.csv  bhavcopy_normal.csv
(+32 files in other folders)
