[package]
name = "fundamentals-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Fetch-agnostic SEBI in-capmkt XBRL parser + normalized fundamentals types, extracted from the traderview app"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
roxmltree = { workspace = true }
